# job-search-tool

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_FIXES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish-docker.yml  publish-main.yml  publish-release.yml
config/: config.example.yaml  settings.example.yaml
docker/: entrypoint.sh  smoke-dashboard-console.sh
docker/compat/: api_server.py  healthcheck.py  main.py  mcp_server.py
docs/developer/: architecture.md  release.md  testing.md
docs/developer/current-system/: 00-executive-summary.md  01-problem-and-domain-model.md  02-feature-catalog.md  03-architecture-and-runtime.md  04-module-reference.md  05-data-storage-and-config.md  06-quality-operations-and-risks.md  07-abstracted-problem-and-solution.md  README.md
docs/developer/plans/: 2026-05-11-web-platform-9.md
docs/superpowers/plans/: 2026-05-11-dashboard-hardening.md  2026-05-13-dashboard-console-redesign.md  2026-05-13-frontend-console-completion.md
docs/superpowers/specs/: 2026-05-13-dashboard-console-redesign.md
docs/user/: api.md  configuration.md  docker.md  mcp.md  operations.md
examples/: software_engineer_config.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: AlertBanner.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Metric.tsx  PageHeader.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/features/analytics/: AnalyticsPage.test.tsx  AnalyticsPage.tsx
frontend/src/features/blacklist/: BlacklistPage.test.tsx  BlacklistPage.tsx
frontend/src/features/cleanup/: CleanupPage.test.tsx  CleanupPage.tsx
frontend/src/features/database/: DatabasePage.test.tsx  DatabasePage.tsx
frontend/src/features/jobs/: JobActionsBar.tsx  JobDetailPanel.tsx  JobFiltersPanel.tsx  JobTable.tsx  JobsPage.test.tsx  JobsPage.tsx  jobDisplay.tsx  jobFilters.ts  jobQueries.ts
scripts/: analyze_jobs.py  api_server.py  bootstrap_config.py  config.py  dashboard.py  database.py  exporter.py  healthcheck.py  job_service.py  logger.py  main.py  mcp_server.py  models.py  notifier.py  report_generator.py  scheduler.py  scoring.py  search_jobs.py  vector_commands.py  vector_store.py
src/job_search_tool/: __init__.py  api_server.py  chroma_telemetry.py  config.py  dashboard.py  database.py  exporter.py  healthcheck.py  job_service.py  logger.py  main.py  mcp_server.py  models.py  notifier.py  project_meta.py  scheduler.py  scoring.py  search_jobs.py  settings_reference.py  vector_commands.py  vector_store.py
src/job_search_tool/application/: __init__.py  jobs.py  models.py
src/job_search_tool/defaults/: __init__.py  settings.example.yaml
src/job_search_tool/web/: __init__.py  api.py  app.py  mcp.py  static.py
templates/: telegram_summary.md.j2
tests/: __init__.py  conftest.py  test_analyze_jobs.py  test_api_server.py  test_application_jobs.py  test_bootstrap_config.py  test_chroma_telemetry.py  test_config.py  test_dashboard.py  test_database.py  test_docker_compose.py  test_documentation_runtime.py  test_exporter.py  test_github_workflows.py  test_healthcheck.py  test_integration.py  test_job_service.py  test_logger.py  test_main.py  test_mcp_server.py  test_models.py  test_notifier.py  test_project_meta.py  test_report_generator.py  test_scheduler.py  test_scoring.py  test_search_jobs.py  test_settings_reference.py  test_vector_store.py  test_web_api.py  test_web_mcp.py  test_web_static.py
