[project]
name = "job-search-tool"
version = "6.0.6"
description = "Automated job search aggregation, scoring, notifications, and dashboard tooling."
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.80,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "APScheduler>=3.10.0,<4.0.0",
    "python-telegram-bot>=21.0,<22.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "streamlit>=1.28.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pytest-randomly>=3.15.0,<4.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[tool.uv]
default-groups = ["dev"]
