[project]
name = "job-search-tool"
version = "9.0.0"
description = "Automated job search aggregation, scoring, notifications, and dashboard tooling."
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.80,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "APScheduler>=3.10.0,<4.0.0",
    "python-telegram-bot>=21.0,<22.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "mcp[cli]>=1.0.0,<2.0.0",
]

[project.scripts]
job-search = "job_search_tool.main:main"
job-search-web = "job_search_tool.web.app:main"
job-search-healthcheck = "job_search_tool.healthcheck:main"

[build-system]
requires = ["hatchling>=1.26.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search_tool"]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pytest-randomly>=3.15.0,<4.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[tool.uv]
constraint-dependencies = [
    # Security floors for transitive runtime dependencies audited in CI.
    "gitpython>=3.1.50",
    "python-multipart>=0.0.27",
    "urllib3>=2.7.0",
]
default-groups = ["dev"]
