[project]
name = "job-search-tool"
version = "10.2.0"
description = "Automated job search aggregation, scoring, notifications, and dashboard tooling."
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.80,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "APScheduler>=3.10.0,<4.0.0",
    "python-telegram-bot>=21.0,<22.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "mcp[cli]>=1.0.0,<2.0.0",
]

[project.scripts]
job-search = "job_search_tool.main:main"
job-search-web = "job_search_tool.web.app:main"
job-search-healthcheck = "job_search_tool.healthcheck:main"

[build-system]
requires = ["hatchling>=1.26.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search_tool"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pytest-randomly>=3.15.0,<4.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    # Keep in step with the ruff-pre-commit rev in .pre-commit-config.yaml so
    # `uv run ruff` and the git hook resolve to the same behavior.
    "ruff>=0.15.6,<1.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[tool.uv]
constraint-dependencies = [
    # Security floors for transitive runtime dependencies audited in CI.
    # Each floor is the minimum version that clears a pip-audit finding for a
    # package we only pull in indirectly (mostly via mcp/fastapi).
    "cryptography>=48.0.1",       # GHSA-537c-gmf6-5ccf (via mcp -> pyjwt[crypto])
    "gitpython>=3.1.50",
    "idna>=3.15",                 # PYSEC-2026-215 (via anyio/httpx/requests)
    "pydantic-settings>=2.14.2",  # GHSA-4xgf-cpjx-pc3j (via mcp)
    "pyjwt>=2.13.0",              # PYSEC-2026-175/177/178/179, GHSA-jq35-7prp-9v3f (via mcp)
    "python-multipart>=0.0.31",   # GHSA-v9pg-7xvm-68hf and 2 more (via mcp)
    "starlette>=1.3.1",           # PYSEC-2026-161/248/249, 2 GHSAs (via fastapi/mcp)
    "urllib3>=2.7.0",
]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
